# insta

./: README.md  final-content-strategy.md  market_research.md  pyproject.toml
src/insta/: crew.py  main.py
src/insta/config/: tasks.yaml
src/insta/tools/: search.py
